shadow exclude error #41978

Closed
opened 2014-09-27 18:23:08 +02:00 by Alexey · 12 comments

System Information
windows7 64
ASUS ATI Radeon HD6870

Blender Version
Broken: (All)
Worked: (None)

Short description of error
shadow_exclude1.png
shadow_exclude2.png
Exact steps for others to reproduce the error
shadow_exclude_error.blend
open , select rendered shading mode or F12 to render - we will see shadows is not exclude

System Information windows7 64 ASUS ATI Radeon HD6870 Blender Version Broken: (All) Worked: (None) **Short description of error** ![shadow_exclude1.png](https://archive.blender.org/developer/F113161/shadow_exclude1.png) ![shadow_exclude2.png](https://archive.blender.org/developer/F113163/shadow_exclude2.png) **Exact steps for others to reproduce the error** [shadow_exclude_error.blend](https://archive.blender.org/developer/F113165/shadow_exclude_error.blend) open , select rendered shading mode or F12 to render - we will see shadows is not exclude
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

pass.png

![pass.png](https://archive.blender.org/developer/F113176/pass.png)
Bastien Montagne self-assigned this 2014-09-27 21:31:56 +02:00

Yeah, odd, see no obvious reason for this behavior in code, will have a closer look tomorrow.

Yeah, odd, see no obvious reason for this behavior in code, will have a closer look tomorrow.

Added subscriber: @zeauro

Added subscriber: @zeauro

To exclude a pass from combined pass, you have to make BI deliver it.

I am not sure but I think it is related to the way it worked in 2.4x.
Look at the UI.
http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Post_Process/Passes#Selecting_Render_Passes

To exclude a pass from combined pass, you have to make BI deliver it. I am not sure but I think it is related to the way it worked in 2.4x. Look at the UI. http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Post_Process/Passes#Selecting_Render_Passes
Author

i was test 2.49b 2009 09 01 and this bug is active

i was test 2.49b 2009 09 01 and this bug is active

@zeauro, this is not always exact (see e.g. emit pass), and I see no reason in code for this behavior… to me it looks like a bug.

@zeauro, this is not always exact (see e.g. emit pass), and I see no reason in code for this behavior… to me it looks like a bug.

This issue was referenced by bf8cd9011d

This issue was referenced by bf8cd9011de98dbe414100ae01777fa8d9f677a1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bf8cd9011d.

Closed by commit bf8cd9011d.

This issue was referenced by 76935072a6

This issue was referenced by 76935072a6f04634b718ffb3bb18a7137ff89343
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41978
No description provided.