Fix T41978: Shadow was not excluded from combined path unless shadow pass was rendered too.

Pretty straightforward, issue probably goes back to (pre)history!